# PINN-sol-particle-transport

./: .gitignore
sol-pinn/: .gitignore  pyproject.toml  requirements.txt  sol-pinn项目汇报.md
sol-pinn/docs/: inverse_accuracy_report.md  stage_summary_gamma_parameter_estimation.md
sol-pinn/docs/paper/: model_description.md  model_description_compact.md
sol-pinn/experiments/phase3_inverse/: compare_inversion.py  noise_study.py  run_inversion.py
sol-pinn/experiments/pinn/: ablation_study.py  scan_tup.py  train.py
sol-pinn/experiments/validation/: compare_pinn_fd.py  generalization_test.py  generate_project_feature_figures.py  hardcase_analysis.py  plot_baseline.py  run_fd_solver.py  scan_parameters.py
sol-pinn/fd_reference/: __init__.py
sol-pinn/fd_reference/numerical/: __init__.py  bvp_solver.py  fd_solver.py
sol-pinn/fd_reference/tests/: test_numerical.py
sol-pinn/sol_pinn/: __init__.py
sol-pinn/sol_pinn/experiments/: __init__.py  bootstrap.py
sol-pinn/sol_pinn/inverse/: __init__.py  least_squares.py  pinn_inversion.py
sol-pinn/sol_pinn/physics/: __init__.py  boundary.py  constants.py  params.py  pde.py  regimes.py
sol-pinn/sol_pinn/pinn/: __init__.py  loss.py  network.py  pinn_solver.py  trainer.py
sol-pinn/sol_pinn/utils/: __init__.py  io.py  metrics.py  normalization.py  plotting.py  sampling.py
sol-pinn/tests/: conftest.py  test_inverse.py  test_physics.py  test_pinn.py
先进方法/: Csala_Transformer自回归代理模型_KSTAR台基预测.md  DIV1D对PINN_SOL项目的参考价值分析.md  PINN_SOL工作的优势定位分析.md  PINN_plasma_research_proposals.md  PINN与SOLPS交叉内容调研.md  传统SOL刮削层输运模拟方法综述.md  (+2 more)
