[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sol-pinn"
version = "0.1.0"
description = "PINN-based 1D SOL parallel transport and Sheath boundary modeling"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "torch>=2.0.0",
    "matplotlib>=3.7.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "pytest>=7.4.0",
    "seaborn>=0.12.0",
]

[tool.setuptools.packages.find]
include = ["sol_pinn*", "fd_reference*"]
